--- a/.github/workflows/01_gchr.yml
+++ b/.github/workflows/01_gchr.yml
@@ -8,27 +8,31 @@ on:
 jobs:
   # job은 병렬로 처리되기 때문에 순서가 중요하다면 같은 job 안에 step으로 진행
   build-and-push:
+    permissions:
+      contents: read # checkout
+      packages: write # 패키지 생성용
+
     runs-on: ubuntu-latest # amd64
 
     steps:
       # 작동 테스트용
       - name: Logging
         run: echo 'Hello Docker!'
-    
-    # 소스코드를 runner가 읽어야함 (checkout)
+
+      # 소스코드를 runner가 읽어야함 (checkout)
       - name: 소스코드 체크아웃
         uses: actions/checkout@v6
-      
-    # docker가 ghcr.io로 로그인 (PAT)
-      - name : GHCR 로그인
-        uses : docker/login-action@v3
-        with :
+
+      # docker가 ghcr.io로 로그인 (PAT)
+      - name: GHCR 로그인
+        uses: docker/login-action@v3
+        with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }} # 내장
-    
-    # 빌드하고 push해줘야함
-      - name : 빌드와 푸시
+
+      # 빌드하고 push해줘야함
+      - name: 빌드와 푸시
         uses: docker/build-push-action@v6
         with:
           context: .
